deploy/cdk/cdk.out/LongTail-Network.template.json
{
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/Resource"
   }
  },
  "VpcPublicSubnet1Subnet5C2D37C4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PublicSubnet1/Subnet"
   }
  },
  "VpcPublicSubnet1RouteTable6C95E38E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PublicSubnet1/RouteTable"
   }
  },
  "VpcPublicSubnet1RouteTableAssociation97140677": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "VpcPublicSubnet1DefaultRoute3DA9E72A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "VpcPublicSubnet1EIPD7E02669": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PublicSubnet1/EIP"
   }
  },
  "VpcPublicSubnet1NATGateway4D7517AA": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcPublicSubnet1EIPD7E02669",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
    },
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ]
   },
   "DependsOn": [
    "VpcPublicSubnet1DefaultRoute3DA9E72A",
    "VpcPublicSubnet1RouteTableAssociation97140677"
   ],
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PublicSubnet1/NATGateway"
   }
  },
  "VpcPublicSubnet2Subnet691E08A3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-1c",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PublicSubnet2/Subnet"
   }
  },
  "VpcPublicSubnet2RouteTable94F7E489": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PublicSubnet2/RouteTable"
   }
  },
  "VpcPublicSubnet2RouteTableAssociationDD5762D8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPublicSubnet2RouteTable94F7E489"
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet2Subnet691E08A3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "VpcPublicSubnet2DefaultRoute97F91067": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcPublicSubnet2RouteTable94F7E489"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "VpcPrivateSubnet1Subnet536B997A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PrivateSubnet1/Subnet"
   }
  },
  "VpcPrivateSubnet1RouteTableB2C5B500": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PrivateSubnet1/RouteTable"
   }
  },
  "VpcPrivateSubnet1RouteTableAssociation70C59FA6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
    },
    "SubnetId": {
     "Ref": "VpcPrivateSubnet1Subnet536B997A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "VpcPrivateSubnet1DefaultRouteBE02A9ED": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcPublicSubnet1NATGateway4D7517AA"
    },
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "VpcPrivateSubnet2Subnet3788AAA1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-1c",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PrivateSubnet2/Subnet"
   }
  },
  "VpcPrivateSubnet2RouteTableA678073B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PrivateSubnet2/RouteTable"
   }
  },
  "VpcPrivateSubnet2RouteTableAssociationA89CAD56": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet2RouteTableA678073B"
    },
    "SubnetId": {
     "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "VpcPrivateSubnet2DefaultRoute060D2087": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcPublicSubnet1NATGateway4D7517AA"
    },
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet2RouteTableA678073B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "VpcIsolatedSubnet1SubnetE48C5737": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-1a",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc/IsolatedSubnet1"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/IsolatedSubnet1/Subnet"
   }
  },
  "VpcIsolatedSubnet1RouteTable4771E3E5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc/IsolatedSubnet1"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/IsolatedSubnet1/RouteTable"
   }
  },
  "VpcIsolatedSubnet1RouteTableAssociationD300FCBB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcIsolatedSubnet1RouteTable4771E3E5"
    },
    "SubnetId": {
     "Ref": "VpcIsolatedSubnet1SubnetE48C5737"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/IsolatedSubnet1/RouteTableAssociation"
   }
  },
  "VpcIsolatedSubnet2Subnet16364B91": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-1c",
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc/IsolatedSubnet2"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/IsolatedSubnet2/Subnet"
   }
  },
  "VpcIsolatedSubnet2RouteTable1D30AF7D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc/IsolatedSubnet2"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/IsolatedSubnet2/RouteTable"
   }
  },
  "VpcIsolatedSubnet2RouteTableAssociationF7B18CCA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcIsolatedSubnet2RouteTable1D30AF7D"
    },
    "SubnetId": {
     "Ref": "VpcIsolatedSubnet2Subnet16364B91"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/IsolatedSubnet2/RouteTableAssociation"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "LongTail-Network/Vpc"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/Vpc/VPCGW"
   }
  },
  "AlbSecurityGroup86A59E99": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Long Tail ALB",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "HTTP from anywhere",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "HTTPS from anywhere",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "NATS WebSocket from anywhere (TLS terminated at ALB)",
      "FromPort": 9222,
      "IpProtocol": "tcp",
      "ToPort": 9222
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/AlbSecurityGroup/Resource"
   }
  },
  "AppSecurityGroupC396D536": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Long Tail API Fargate tasks",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/AppSecurityGroup/Resource"
   }
  },
  "AppSecurityGroupfromLongTailNetworkAlbSecurityGroupC65482D430309F8A372E": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "ALB to API container",
    "FromPort": 3030,
    "GroupId": {
     "Fn::GetAtt": [
      "AppSecurityGroupC396D536",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "AlbSecurityGroup86A59E99",
      "GroupId"
     ]
    },
    "ToPort": 3030
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/AppSecurityGroup/from LongTailNetworkAlbSecurityGroupC65482D4:3030"
   }
  },
  "WorkerSecurityGroup5529CF0B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Long Tail worker Fargate tasks - no inbound",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/WorkerSecurityGroup/Resource"
   }
  },
  "NatsSecurityGroup9384EC4D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for NATS event bus",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/NatsSecurityGroup/Resource"
   }
  },
  "NatsSecurityGroupfromLongTailNetworkAppSecurityGroup7830FEA942226674D6EC": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "API tasks to NATS",
    "FromPort": 4222,
    "GroupId": {
     "Fn::GetAtt": [
      "NatsSecurityGroup9384EC4D",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "AppSecurityGroupC396D536",
      "GroupId"
     ]
    },
    "ToPort": 4222
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/NatsSecurityGroup/from LongTailNetworkAppSecurityGroup7830FEA9:4222"
   }
  },
  "NatsSecurityGroupfromLongTailNetworkWorkerSecurityGroup34DBA06A422259F865AB": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Worker tasks to NATS",
    "FromPort": 4222,
    "GroupId": {
     "Fn::GetAtt": [
      "NatsSecurityGroup9384EC4D",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "WorkerSecurityGroup5529CF0B",
      "GroupId"
     ]
    },
    "ToPort": 4222
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/NatsSecurityGroup/from LongTailNetworkWorkerSecurityGroup34DBA06A:4222"
   }
  },
  "NatsSecurityGroupfromLongTailNetworkAlbSecurityGroupC65482D49222E16B411F": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "ALB to NATS WebSocket",
    "FromPort": 9222,
    "GroupId": {
     "Fn::GetAtt": [
      "NatsSecurityGroup9384EC4D",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "AlbSecurityGroup86A59E99",
      "GroupId"
     ]
    },
    "ToPort": 9222
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/NatsSecurityGroup/from LongTailNetworkAlbSecurityGroupC65482D4:9222"
   }
  },
  "NatsSecurityGroupfromLongTailNetworkAlbSecurityGroupC65482D48222249CF603": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "ALB health check to NATS monitoring",
    "FromPort": 8222,
    "GroupId": {
     "Fn::GetAtt": [
      "NatsSecurityGroup9384EC4D",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "AlbSecurityGroup86A59E99",
      "GroupId"
     ]
    },
    "ToPort": 8222
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/NatsSecurityGroup/from LongTailNetworkAlbSecurityGroupC65482D4:8222"
   }
  },
  "NatsSecurityGroupfromLongTailNetworkAppSecurityGroup7830FEA992229BDA0C58": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "API reverse proxy to NATS WebSocket",
    "FromPort": 9222,
    "GroupId": {
     "Fn::GetAtt": [
      "NatsSecurityGroup9384EC4D",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "AppSecurityGroupC396D536",
      "GroupId"
     ]
    },
    "ToPort": 9222
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/NatsSecurityGroup/from LongTailNetworkAppSecurityGroup7830FEA9:9222"
   }
  },
  "DbSecurityGroupE9D701AD": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Long Tail RDS instance",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "Project",
      "Value": "longtail"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/DbSecurityGroup/Resource"
   }
  },
  "DbSecurityGroupfromLongTailNetworkAppSecurityGroup7830FEA95432C800EBC2": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "API tasks to RDS",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "DbSecurityGroupE9D701AD",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "AppSecurityGroupC396D536",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/DbSecurityGroup/from LongTailNetworkAppSecurityGroup7830FEA9:5432"
   }
  },
  "DbSecurityGroupfromLongTailNetworkWorkerSecurityGroup34DBA06A5432D5B07DB1": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Worker tasks to RDS",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "DbSecurityGroupE9D701AD",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "WorkerSecurityGroup5529CF0B",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/DbSecurityGroup/from LongTailNetworkWorkerSecurityGroup34DBA06A:5432"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/32OwYrCQBBEv8X7ZHSH9QNERHJZQiJepdP27rbGHpnuMYj475J1MTdPVfUoigo+zIOfTaDXAvfHouPW3xoDPDrodUcY/G17Rrf8lm21dFVuO8Ymt0I2sNHVMRttoO1o5CNbqEZkMI7yKg9mVVaDfIGtwaiHq6sSX8BoHC7FKAm9Cs8n/2lhBvh7IjHXEObEdl2nmM9/H96CUn4Sqd5dTRpzQro7iXvyB51ewqf/mPvZ5KDMRcpifCJfP/UB+Ar5dzEBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "LongTail-Network/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefVpcIsolatedSubnet1SubnetE48C57379FE391D3": {
   "Value": {
    "Ref": "VpcIsolatedSubnet1SubnetE48C5737"
   },
   "Export": {
    "Name": "LongTail-Network:ExportsOutputRefVpcIsolatedSubnet1SubnetE48C57379FE391D3"
   }
  },
  "ExportsOutputRefVpcIsolatedSubnet2Subnet16364B914643ED68": {
   "Value": {
    "Ref": "VpcIsolatedSubnet2Subnet16364B91"
   },
   "Export": {
    "Name": "LongTail-Network:ExportsOutputRefVpcIsolatedSubnet2Subnet16364B914643ED68"
   }
  },
  "ExportsOutputFnGetAttDbSecurityGroupE9D701ADGroupId7A7C114A": {
   "Value": {
    "Fn::GetAtt": [
     "DbSecurityGroupE9D701AD",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "LongTail-Network:ExportsOutputFnGetAttDbSecurityGroupE9D701ADGroupId7A7C114A"
   }
  },
  "ExportsOutputRefVpc8378EB38272D6E3A": {
   "Value": {
    "Ref": "Vpc8378EB38"
   },
   "Export": {
    "Name": "LongTail-Network:ExportsOutputRefVpc8378EB38272D6E3A"
   }
  },
  "ExportsOutputRefVpcPrivateSubnet1Subnet536B997AFD4CC940": {
   "Value": {
    "Ref": "VpcPrivateSubnet1Subnet536B997A"
   },
   "Export": {
    "Name": "LongTail-Network:ExportsOutputRefVpcPrivateSubnet1Subnet536B997AFD4CC940"
   }
  },
  "ExportsOutputRefVpcPrivateSubnet2Subnet3788AAA1380949A3": {
   "Value": {
    "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
   },
   "Export": {
    "Name": "LongTail-Network:ExportsOutputRefVpcPrivateSubnet2Subnet3788AAA1380949A3"
   }
  },
  "ExportsOutputFnGetAttNatsSecurityGroup9384EC4DGroupIdEF0D355A": {
   "Value": {
    "Fn::GetAtt": [
     "NatsSecurityGroup9384EC4D",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "LongTail-Network:ExportsOutputFnGetAttNatsSecurityGroup9384EC4DGroupIdEF0D355A"
   }
  },
  "ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7": {
   "Value": {
    "Fn::GetAtt": [
     "AlbSecurityGroup86A59E99",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "LongTail-Network:ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7"
   }
  },
  "ExportsOutputRefVpcPublicSubnet1Subnet5C2D37C4FFA2B456": {
   "Value": {
    "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
   },
   "Export": {
    "Name": "LongTail-Network:ExportsOutputRefVpcPublicSubnet1Subnet5C2D37C4FFA2B456"
   }
  },
  "ExportsOutputRefVpcPublicSubnet2Subnet691E08A351552740": {
   "Value": {
    "Ref": "VpcPublicSubnet2Subnet691E08A3"
   },
   "Export": {
    "Name": "LongTail-Network:ExportsOutputRefVpcPublicSubnet2Subnet691E08A351552740"
   }
  },
  "ExportsOutputFnGetAttAppSecurityGroupC396D536GroupId4ECD26A6": {
   "Value": {
    "Fn::GetAtt": [
     "AppSecurityGroupC396D536",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "LongTail-Network:ExportsOutputFnGetAttAppSecurityGroupC396D536GroupId4ECD26A6"
   }
  },
  "ExportsOutputFnGetAttWorkerSecurityGroup5529CF0BGroupId178F84DF": {
   "Value": {
    "Fn::GetAtt": [
     "WorkerSecurityGroup5529CF0B",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "LongTail-Network:ExportsOutputFnGetAttWorkerSecurityGroup5529CF0BGroupId178F84DF"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
